[package]

name = "dttp"
version = "0.3.0"
authors = ["kurotetsuka <kurotetsuka@gmail.com>"]

[dependencies]
arcmutex = "^0.2"
gpgme = "^0.4"
peg-syntax-ext = "^0.4"
rand = "^0.3"
regex = "^0.2"
rustc-serialize = "^0.3"
#rust-crypto = "*"
#ring = "*"
serde = "^0.8"
serde_derive = "^0.8"
serde_json = "^0.8"
time = "^0.1"
